<?xml version="1.0"?>
<package format="2">
  <name>test_kdl</name>
  <version>0.1.0</version>
  <description>
    Tests kdl performance in cpp vs python
  </description>
  <author email="diogoa@kth.se">diogo</author>
  <maintainer email="diogoa@kth.se">diogo</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>kdl_parser</depend>
</package>
